RESOLVED FIXED194125
[WebGPU] Fix GPURenderPassEncoder::setVertexBuffers and allow overlapping indices with GPUBindGroups
https://bugs.webkit.org/show_bug.cgi?id=194125
Summary [WebGPU] Fix GPURenderPassEncoder::setVertexBuffers and allow overlapping ind...
Justin Fan
Reported 2019-01-31 16:47:04 PST
[WebGPU] Fix GPURenderPassEncoder::setVertexBuffers and allow overlapping indices with GPUBindGroups
Attachments
Patch (28.77 KB, patch)
2019-01-31 17:18 PST, Justin Fan
no flags
Justin Fan
Comment 1 2019-01-31 16:47:51 PST
Justin Fan
Comment 2 2019-01-31 17:18:24 PST
Myles C. Maxfield
Comment 3 2019-02-01 16:31:44 PST
Comment on attachment 360811 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=360811&action=review > Source/WebCore/Modules/webgpu/WHLSL/Metal/WHLSLVertexBufferIndexCalculator.h:42 > +} // namespace Metal > + > +} // namespace WHLSL > + > +} // namespace WebCore Ending comments unnecessary when the file is so short > Source/WebCore/platform/graphics/gpu/cocoa/GPURenderPassEncoderMetal.mm:108 > + [m_platformRenderPassEncoder setVertexBuffers:mtlBuffers.data() offsets:(const NSUInteger *)offsets.data() withRange:indexRanges]; wow > Source/WebCore/platform/graphics/gpu/cocoa/GPURenderPipelineMetal.mm:33 > +#import "WHLSLVertexBufferIndexCalculator.h" 👍
WebKit Commit Bot
Comment 4 2019-02-02 11:54:01 PST
Comment on attachment 360811 [details] Patch Clearing flags on attachment: 360811 Committed r240898: <https://trac.webkit.org/changeset/240898>
WebKit Commit Bot
Comment 5 2019-02-02 11:54:03 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 6 2019-02-04 13:08:45 PST
*** Bug 194182 has been marked as a duplicate of this bug. ***
Justin Fan
Comment 7 2019-02-04 14:55:36 PST
Note You need to log in before you can comment on or make changes to this bug.