Source/WebCore/Modules/webgpu/WebGPUProgrammablePassEncoder.cpp
@@ -47,6 +47,11 @@ Ref<WebGPUCommandBuffer> WebGPUProgrammablePassEncoder::endPass()
 
 void WebGPUProgrammablePassEncoder::setBindGroup(unsigned long index, const WebGPUBindGroup& bindGroup) const
 {
+    // Maximum number of bind groups supported in Web GPU.
+    if (index >= 4) {
+        LOG(WebGPU, "WebGPUProgrammablePassEncoder::setBindGroup(): Invalid index!");
+        return;
+    }
     if (!bindGroup.bindGroup()) {
         LOG(WebGPU, "WebGPUProgrammablePassEncoder::setBindGroup(): Invalid WebGPUBindGroup!");
         return;
